syntax = "proto3";

option go_package = "proto";

enum enumOp {
  NULL = 0;
  DIVISION = 1;
  MULTIPLICATION = 2;
  SUBTRACTION = 3;
  SUM = 4;
}

message OperationDb {
  string id = 1;
  double number1 = 2;
  double number2 = 3;
  double result = 4;
  enumOp operation = 5;
  string dateCreated = 6;
}